# wordle_search

./: .gitignore  README.md  setup.cfg  word_evaluator.py  wordle-search.py  wordle_search.py  wordle_search_cli.py
archive/: setup.cfg
src/: wordlesearch.py
wordle_search/: manage.py
wordle_search/search/: urls.py  wordlists.py
wordle_search/wordle_search/: asgi.py  settings.py  urls.py  wsgi.py
