[metadata]
name = wordlesearch
version = 0.0.1
author = Rick Weber
author_email = rick@hirerick.com
description = A utility to improve your wordle guesses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RickWeber/wordle_search
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
