[metadata]
name = wordlesearch
version = 0.0.2
author = Rick Weber
author_email = rick@hirerick.com
description = A utility to improve your wordle guesses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RickWeber/wordle_search
license = Apache License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
exclude = test*